need to conditional render script to main?

--- a/ssr+esbuild/wui/style.scss
+++ b/ssr+esbuild/wui/style.scss
@@ -1,3 +1,4 @@
+@import '../node_modules/@emsquared/otto_preact_form/src/form/style/_choosy.scss';
 body{
-    background-color: #3f3;
+    background-color: purple;
 }
